# ntfy-zero-inbox

./: .gitignore  Makefile  README.md  index.html  package.json  project.yml  tsconfig.json  vite.config.ts
NtfyWidget/: NtfyWidget.swift
NtfyZeroInbox/: MenuContentView.swift  NtfyClient.swift  NtfyMessage.swift  NtfyZeroInboxApp.swift  SettingsStore.swift  SettingsView.swift
Shared/: AppConfig.swift  InboxItem.swift
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cluster.rs  commands.rs  lib.rs  main.rs  models.rs  ntfy.rs  state.rs  store.rs
src/lib/: Settings.svelte  api.ts  icons.ts  time.ts  types.ts
